--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@zeit/next-css": "^1.0.1",
     "dotenv": "^8.2.0",
     "downshift": "^6.1.0",
-    "next": "10.0.5",
+    "next": "^10.1.3",
     "next-transpile-modules": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -32,6 +32,7 @@
     "tailwind-filter-utilities": "^2.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^9.5.1",
     "bs-platform": "^9.0.1",
     "bs-reach": "^0.5.3",
@@ -39,6 +40,7 @@
     "graphql": "^15.3.0",
     "html-webpack-plugin": "4",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "1.8.10"
+    "tailwindcss": "^2.1.1",
+    "webpack": "^5.33.2"
   }
 }
