--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@apollo/client": "^3.2.1",
     "@reasonml-community/graphql-ppx": "^1.0.2",
-    "@zeit/next-css": "^1.0.1",
     "dotenv": "^8.2.0",
     "downshift": "^6.1.0",
     "next": "^10.1.3",
@@ -33,14 +32,14 @@
   },
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.18",
-    "autoprefixer": "^9.5.1",
+    "autoprefixer": "^10.2.5",
     "bs-platform": "^9.0.1",
     "bs-reach": "^0.5.3",
     "cssnano": "^4.1.10",
     "graphql": "^15.3.0",
     "html-webpack-plugin": "4",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^2.1.1",
-    "webpack": "^5.33.2"
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1"
   }
 }
